@@ -100,6 +100,7 @@
 #include "pbs_ifl.h"
 #include "list_link.h"
 #include "pbs_error.h"
+#include "server_limits.h" /* Pulls in PBS_NET_MAX_CONNECTIONS */
 
 #ifndef LIBPBS_H
 #define LIBPBS_H
@@ -145,7 +146,7 @@ extern char pbs_current_group[];
 /* set ENABLE_TRUSTED_AUTH to "TRUE" to bypass using pbs_iff for authentication */
 #define ENABLE_TRUSTED_AUTH FALSE
 
-#define NCONNECTS 10
+#define NCONNECTS PBS_NET_MAX_CONNECTIONS
 
 struct connect_handle
   {
